--- a/CS19B1017.md
+++ b/CS19B1017.md
@@ -150,7 +150,8 @@ Class hierarchy can be further studied in the doxygen docs [here](https://clang.
 
 
 + ### Polymorphism
-    C++ supports polymorphism its act of providing same interface with different functionalities Ex:when derived classes need to implement a function in different manner, interface provides virtual functions.
+    C++ supports polymorphism its act of providing same interface with different functionalities
+    Ex:when derived classes need to implement a function in different manner, interface provides virtual functions.
     
     Polymorphism is of 2 kinds :
 
