--- a/CS19B1017.md
+++ b/CS19B1017.md
@@ -1,5 +1,5 @@
 # LLVM/Clang
-## An analysis of interesting c++ features that have been used in LLVM/Clang codebase.
+## A report on interesting c++ features that have been used in LLVM/Clang codebase.
 
 LLVM is a compiler infrastructure providing a collection reusable compiler and toolchain technologies.
 Clang is an LLVM compiler for  C/C++/Objective-C source code, which aims to deliver amazingly fast compiles, extremely useful error and warning messages and to provide a platform for building great source level tools.
